Fix mvnw permissions in Docker build

--- a/backend/HotelBookingApplication/Dockerfile
+++ b/backend/HotelBookingApplication/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /workspace
 COPY mvnw* ./
 COPY .mvn .mvn
 COPY pom.xml .
+RUN chmod +x mvnw
 RUN ./mvnw -q -DskipTests dependency:go-offline
 
 COPY src src
