--- a/frontend/Hotel-booking-application/Dockerfile
+++ b/frontend/Hotel-booking-application/Dockerfile
@@ -1,16 +1,9 @@
 # syntax=docker/dockerfile:1
 
-FROM node:18-alpine AS build
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm ci --no-audit --no-fund || npm install
-
-COPY . .
-RUN npm run build
-
 FROM nginx:1.25-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copier le build déjà compilé par Jenkins
+COPY dist /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
